# libdonnell

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  donnell.pc
assets/gui/: ButtonHover.h  ButtonHover2x.h  ButtonHover3x.h  ButtonNormal.h  ButtonNormal2x.h  ButtonNormal3x.h  ButtonPressed.h  ButtonPressed2x.h  ButtonPressed3x.h  ButtonSelectedHover.h  ButtonSelectedHover2x.h  ButtonSelectedHover3x.h  ButtonSelectedNormal.h  ButtonSelectedNormal2x.h  ButtonSelectedNormal3x.h  ButtonSelectedPressed.h  ButtonSelectedPressed2x.h  ButtonSelectedPressed3x.h  CaptionBackground.h  CaptionBackground2x.h  CaptionBackground3x.h  CaptionCloseActive.h  CaptionCloseActive2x.h  CaptionCloseActive3x.h  CaptionCloseHover.h  CaptionCloseHover2x.h  CaptionCloseHover3x.h  CaptionCloseNormal.h  CaptionCloseNormal2x.h  CaptionCloseNormal3x.h  CaptionMaximizeHover.h  CaptionMaximizeHover2x.h  CaptionMaximizeHover3x.h  CaptionMaximizeNormal.h  CaptionMaximizeNormal2x.h  CaptionMaximizeNormal3x.h  CaptionMaximizePressed.h  CaptionMaximizePressed2x.h  CaptionMaximizePressed3x.h  CaptionMinimizeActive2x.h  (+8 more)
assets/icons/: Error16.h  Error32.h  Error64.h  Error96.h  Info16.h  Info32.h  Info64.h  Info96.h  Warning16.h  Warning32.h  Warning64.h  Warning96.h
cmake/: Doxyfile.cmake  FindLibunistring.cmake  donnell.pc.cmake
examples/: example  example-titlebar  example-titlebar-x11.c  example-titlebar.c  example-x11.c  example.c  example2.c  main.c  test2.h
img2donnell/: Makefile
img2donnell/src/: img2donnell.c
include/: bidi.h  donnell.h  fontconfig.h  fontpicker.h  freetype.h  guiprimitives.h  harfbuzz.h  misc.h  pixel.h  stockimages.h  svg.h  symvis.h  textrenderer.h  textutils.h
src/: bidi.c  donnell.c  fontconfig.c  fontpicker.c  freetype.c  graphicsprimitives.c  guiprimitives.c  harfbuzz.c  imagebuf.c  misc.c  pixel.c  stockimages.c  svg.c  textrenderer.c  textutils.c
